fix: fixed css for header in dark mode

--- a/homeworks/carlos-marchal/04,05-css,advanced-css/styles/darkmode.css
+++ b/homeworks/carlos-marchal/04,05-css,advanced-css/styles/darkmode.css
@@ -25,7 +25,7 @@ body{
 
 header{
     text-align: center;
-    margin: 25px auto 65px auto;
+    margin: 45px auto;
 }
 
 
@@ -35,6 +35,7 @@ header{
     transition: all linear 1000ms;
     border: none;
     cursor: pointer;
+    margin: auto;
 }
 
 .dark-mode-button:hover{
